--- a/src/components/body/projects/project-card.css
+++ b/src/components/body/projects/project-card.css
@@ -23,11 +23,12 @@
     display: flex;
     max-width: 60%;
     flex-wrap: wrap;
+    color:black;
 }
 
 .tag{
     padding: 4px 8px;
-    background-color: aquamarine;
+    background-color: white;
     border-radius: 4px;
     margin-right: 6px;
     margin-bottom: 4px;
