--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -17,7 +17,7 @@
 }
 
 .info-name{
-    color: blue;
+    color: #682ae9;
     font-size: 32px;
 }
 
@@ -37,3 +37,4 @@
         font-size: 26px;
     }
 }
+
