--- a/src/components/header/mobile/mobile.css
+++ b/src/components/header/mobile/mobile.css
@@ -1,5 +1,5 @@
 .mobile{
-    background-color: white;
+    background-color: #0e1212;
     height: 100vh;
     width: 100%;
     position: absolute;
@@ -34,6 +34,10 @@
 
 .mobile-option a{
     text-decoration: none;
-    color: black;
+    color: white;
     display: flex;
+}
+
+.mobile-option a:hover{
+    color: #682ae9
 }
